# builder

./: .gitignore  README.md  flake.nix  pyproject.toml
nix/: lib.nix
nix/modules/: remote-builders.nix
src/builder/: __init__.py  main.py
tests/: test_builder.py
